--- a/Levantamento de Perdas/Src/Ret%edfica_Engr_CDZ_3%aa.fx.yaml
+++ b/Levantamento de Perdas/Src/Ret%edfica_Engr_CDZ_3%aa.fx.yaml
@@ -13,7 +13,7 @@ Retífica_Engr_CDZ_3ª As screen:
     Label_setor_26 As label:
         Height: =70
         Size: =21
-        Text: ="Retífica Engr. CDZ 3ª"
+        Text: ="Retífica Engr. 3ª/4ª/5ª CDZ"
         Visible: =false
         Width: =560
         X: =41
@@ -25,7 +25,7 @@ Retífica_Engr_CDZ_3ª As screen:
         Height: =88
         Size: =24
         Text: |-
-            ="Linha Retífica Engr. 3ª CDZ
+            ="Linha Retífica Engr. 3ª/4ª/5ª CDZ
             UTE 2912"
         Width: =640
         Y: =13
