--- a/Levantamento de Perdas/Src/Tela_Ini_2912.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Ini_2912.fx.yaml
@@ -93,7 +93,7 @@ Tela_Ini_2912 As screen:
             =Navigate(Retífica_Engr_CDT_3ª);
             Set(vartela , "Retífica_Engr_CDT_3ª");
         Size: =24
-        Text: ="Retífica Engr. CDT 3ª"
+        Text: ="Retífica Engr. CDT 3ª/4ª"
         Width: =Button2_7.Width
         X: =Button2_8.X
         Y: =370
@@ -117,7 +117,7 @@ Tela_Ini_2912 As screen:
             =Navigate(Retífica_Engr_CDZ_3ª);
             Set(vartela , "Retífica_Engr_CDZ_3ª");
         Size: =24
-        Text: ="Retífica Engr. CDZ 3ª"
+        Text: ="Retífica Engr. CDZ 3ª/4ª/5ª"
         Width: =Button2_7.Width
         X: =Button2_8.X
         Y: =480
@@ -135,18 +135,6 @@ Tela_Ini_2912 As screen:
         Y: =590
         ZIndex: =11
 
-    Button2_16 As button:
-        Height: =Button2_7.Height
-        OnSelect: |
-            =Navigate(Retífica_Engr_CDT_4ª);
-            Set(vartela , "Retífica_Engr_CDT_4ª");
-        Size: =24
-        Text: ="Retífica Engr. CDT 4ª"
-        Width: =Button2_7.Width
-        X: =Button2_8.X
-        Y: =590
-        ZIndex: =12
-
     Button2_17 As button:
         Height: =Button2_7.Height
         OnSelect: |-
@@ -158,18 +146,6 @@ Tela_Ini_2912 As screen:
         X: =Button2_7.X
         Y: =700
         ZIndex: =13
-
-    Button2_18 As button:
-        Height: =Button2_7.Height
-        OnSelect: |-
-            =Navigate(Retífica_Engr_CDZ_4ª);
-            Set(vartela , "Retífica_Engr_CDZ_4ª");
-        Size: =24
-        Text: ="Retífica Engr. CDZ 4ª"
-        Width: =Button2_7.Width
-        X: =Button2_8.X
-        Y: =700
-        ZIndex: =14
 
     Button2_19 As button:
         Height: =Button2_7.Height
@@ -192,7 +168,7 @@ Tela_Ini_2912 As screen:
         Text: ="Retífica Engr. CDT 5ª"
         Width: =Button2_7.Width
         X: =Button2_8.X
-        Y: =810
+        Y: =590
         ZIndex: =16
 
     Button2_21 As button:
@@ -206,18 +182,6 @@ Tela_Ini_2912 As screen:
         X: =Button2_7.X
         Y: =920
         ZIndex: =17
-
-    Button2_22 As button:
-        Height: =Button2_7.Height
-        OnSelect: |-
-            =Navigate(Retífica_Engr_CDZ_5ª);
-            Set(vartela , "Retífica_Engr_CDZ_5ª");
-        Size: =24
-        Text: ="Retífica Engr. CDZ 5ª"
-        Width: =Button2_7.Width
-        X: =Button2_8.X
-        Y: =920
-        ZIndex: =18
 
     Button2_23 As button:
         Height: =Button2_7.Height
