--- a/Levantamento de Perdas/Src/Ret%edfica_Luva_3%aa4%aa.fx.yaml
+++ b/Levantamento de Perdas/Src/Ret%edfica_Luva_3%aa4%aa.fx.yaml
@@ -13,7 +13,7 @@ Retífica_Luva_3ª4ª As screen:
     Label_setor_32 As label:
         Height: =70
         Size: =21
-        Text: ="Retifica Luva 3ª4ª"
+        Text: ="Retífica Luva 3ª4ª"
         Visible: =false
         Width: =560
         X: =41
