--- a/Levantamento de Perdas/Src/Ret%edfica_Engr_CDT_3%aa.fx.yaml
+++ b/Levantamento de Perdas/Src/Ret%edfica_Engr_CDT_3%aa.fx.yaml
@@ -25,7 +25,7 @@ Retífica_Engr_CDT_3ª As screen:
         Height: =88
         Size: =24
         Text: |-
-            ="Linha Retífica Engr. 3ª CDT
+            ="Linha Retífica Engr. 3ª/4ª CDT
             UTE 2912"
         Width: =640
         Y: =13
