--- a/Levantamento de Perdas/Src/Ret%edfica_Coroa_Cil%edndrica.fx.yaml
+++ b/Levantamento de Perdas/Src/Ret%edfica_Coroa_Cil%edndrica.fx.yaml
@@ -13,7 +13,7 @@ Retífica_Coroa_Cilíndrica As screen:
     Label_setor_22 As label:
         Height: =70
         Size: =21
-        Text: ="Retífica Coroa Cilíndica"
+        Text: ="Retífica Coroa Cilíndrica"
         Visible: =false
         Width: =560
         X: =41
