--- a/Levantamento de Perdas/Src/Ret%edfica_Coroa_Cil%edndrica.fx.yaml
+++ b/Levantamento de Perdas/Src/Ret%edfica_Coroa_Cil%edndrica.fx.yaml
@@ -4,7 +4,7 @@ Retífica_Coroa_Cilíndrica As screen:
 
     Image3_22 As image:
         Height: =968
-        Image: =Retífica_Coroa_Cilíndrica_1
+        Image: ='Retífica_Coroa_Cilíndrica_2'
         ImagePosition: =ImagePosition.Stretch
         Width: =640
         Y: =168
@@ -46,33 +46,6 @@ Retífica_Coroa_Cilíndrica As screen:
         X: =560
         Y: =13
         ZIndex: =18
-
-    Btnmaq_47 As button:
-        DisabledColor: =RGBA(0, 0, 0, 0)
-        DisabledFill: =RGBA(0, 0, 0, 0)
-        DisplayMode: =DisplayMode.View
-        Fill: =RGBA(0, 0, 0, 0)
-        Height: =200
-        HoverColor: =RGBA(0, 0, 0, 0)
-        HoverFill: |-
-            =RGBA(4, 114, 14, 0.9)
-            
-            //ColorFade(RGBA(56; 96; 178; 1); -20%)
-        OnSelect: |
-            =Set( varmaquina , "11500668");
-            Set( varsetor ,  Label_setor_22.Text );
-            Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
-            Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
-            Set( varselect , 1) ;
-            Set(varDelay,false);
-            Set(varIDpai,  Value(DataCardute.Selected.Result) & Value(DataCardmaquina.Selected.Result) & DataCardcolaborador.Text & DataCarddata.SelectedDate & DataCardhora_inicio.Selected.Result) ; Set(varDelta , 0) ;
-            NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
-        Size: =24
-        Text: =""
-        Tooltip: ="Máquina sem CAF"
-        X: =140
-        Y: =316
-        ZIndex: =20
 
     Btnmaq_48 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
