--- a/Levantamento de Perdas/Src/Ret%edfica_Planet%e1ria.fx.yaml
+++ b/Levantamento de Perdas/Src/Ret%edfica_Planet%e1ria.fx.yaml
@@ -154,6 +154,7 @@ Retífica_Planetária As screen:
     Label5 As label:
         Align: =Align.Center
         Fill: =RGBA(255, 255, 255, 1)
+        FontWeight: =FontWeight.Bold
         Height: =119
         Size: =21
         Text: |-
