--- a/Levantamento de Perdas/Src/Tela_Inicial_app.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Inicial_app.fx.yaml
@@ -410,9 +410,10 @@ Tela_Inicial_app As screen:
     Label4 As label:
         Align: =Align.Center
         Color: =RGBA(255, 255, 255, 1)
+        Fill: =RGBA(0, 0, 0, 1)
         Height: =41
         Size: =14
-        Text: ="Versão 3.22122.15.5"
+        Text: ="Versão 3.22122.15.15"
         Width: =207
         X: =433
         Y: =1095
