--- a/Levantamento de Perdas/Src/Tela_Inicial_app.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Inicial_app.fx.yaml
@@ -413,7 +413,7 @@ Tela_Inicial_app As screen:
         Fill: =RGBA(0, 0, 0, 1)
         Height: =41
         Size: =14
-        Text: ="Versão 3.22122.15.16"
+        Text: ="Versão 17/01/23"
         Width: =207
         X: =433
         Y: =1095
