--- a/Levantamento de Perdas/Src/Usinagem_Caixa_Diferencial_Completa.fx.yaml
+++ b/Levantamento de Perdas/Src/Usinagem_Caixa_Diferencial_Completa.fx.yaml
@@ -427,3 +427,36 @@ Usinagem_Caixa_Diferencial_Completa As screen:
         Y: =1023
         ZIndex: =18
 
+    Label6 As label:
+        Color: =RGBA(255, 255, 255, 1)
+        Fill: =RGBA(255, 255, 255, 1)
+        Height: =95
+        Size: =21
+        Text: ="Máquinas foram eliminadas"
+        Width: =338
+        X: =301
+        Y: =645
+        ZIndex: =19
+
+    Label6_1 As label:
+        Color: =RGBA(255, 255, 255, 1)
+        Fill: =RGBA(255, 255, 255, 1)
+        Height: =175
+        Size: =21
+        Text: =
+        Width: =111
+        X: =282
+        Y: =514
+        ZIndex: =20
+
+    Label6_2 As label:
+        Color: =RGBA(255, 255, 255, 1)
+        Fill: =RGBA(255, 255, 255, 1)
+        Height: =30
+        Size: =21
+        Text: =
+        Width: =111
+        X: =337
+        Y: =531
+        ZIndex: =21
+
