--- a/Levantamento de Perdas/Src/Usinagem_Caixa_Diferencial_Completa.fx.yaml
+++ b/Levantamento de Perdas/Src/Usinagem_Caixa_Diferencial_Completa.fx.yaml
@@ -51,7 +51,7 @@ Usinagem_Caixa_Diferencial_Completa As screen:
         DisabledColor: =RGBA(0, 0, 0, 0)
         DisabledFill: =RGBA(0, 0, 0, 0)
         Fill: =RGBA(0, 0, 0, 0)
-        Height: =78
+        Height: =82
         HoverColor: =RGBA(0, 0, 0, 0)
         HoverFill: |-
             =RGBA(4, 114, 14, 0.9)
@@ -69,16 +69,16 @@ Usinagem_Caixa_Diferencial_Completa As screen:
             NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
         Size: =24
         Text: =""
-        Width: =82
-        X: =80
-        Y: =361
+        Width: =79
+        X: =78
+        Y: =378
         ZIndex: =5
 
     Btnmaq_168 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
         DisabledFill: =RGBA(0, 0, 0, 0)
         Fill: =RGBA(0, 0, 0, 0)
-        Height: =78
+        Height: =82
         HoverColor: =RGBA(0, 0, 0, 0)
         HoverFill: |-
             =RGBA(4, 114, 14, 0.9)
@@ -96,16 +96,16 @@ Usinagem_Caixa_Diferencial_Completa As screen:
             NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
         Size: =24
         Text: =""
-        Width: =82
-        X: =233
-        Y: =361
+        Width: =79
+        X: =230
+        Y: =378
         ZIndex: =6
 
     Btnmaq_169 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
         DisabledFill: =RGBA(0, 0, 0, 0)
         Fill: =RGBA(0, 0, 0, 0)
-        Height: =78
+        Height: =82
         HoverColor: =RGBA(0, 0, 0, 0)
         HoverFill: |-
             =RGBA(4, 114, 14, 0.9)
@@ -123,16 +123,16 @@ Usinagem_Caixa_Diferencial_Completa As screen:
             NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
         Size: =24
         Text: =""
-        Width: =82
-        X: =395
-        Y: =361
+        Width: =79
+        X: =392
+        Y: =378
         ZIndex: =7
 
     Btnmaq_171 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
         DisabledFill: =RGBA(0, 0, 0, 0)
         Fill: =RGBA(0, 0, 0, 0)
-        Height: =78
+        Height: =82
         HoverColor: =RGBA(0, 0, 0, 0)
         HoverFill: |-
             =RGBA(4, 114, 14, 0.9)
@@ -150,23 +150,23 @@ Usinagem_Caixa_Diferencial_Completa As screen:
             NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
         Size: =24
         Text: =""
-        Width: =82
-        X: =546
-        Y: =361
+        Width: =79
+        X: =544
+        Y: =378
         ZIndex: =8
 
     Btnmaq_172 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
         DisabledFill: =RGBA(0, 0, 0, 0)
         Fill: =RGBA(0, 0, 0, 0)
-        Height: =78
+        Height: =82
         HoverColor: =RGBA(0, 0, 0, 0)
         HoverFill: |-
             =RGBA(4, 114, 14, 0.9)
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "333530719");
+            =Set( varmaquina , "3335107019");
             //Set( varsetor ;  Label_setor_20.Text );;
             Set( varsetor , Text(LookUp(CreateMaquina, varmaquina = CAF).SETOR));
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
@@ -177,23 +177,23 @@ Usinagem_Caixa_Diferencial_Completa As screen:
             NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
         Size: =24
         Text: =""
-        Width: =82
-        X: =395
-        Y: =267
+        Width: =79
+        X: =392
+        Y: =275
         ZIndex: =9
 
     Btnmaq_173 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
         DisabledFill: =RGBA(0, 0, 0, 0)
         Fill: =RGBA(0, 0, 0, 0)
-        Height: =78
+        Height: =82
         HoverColor: =RGBA(0, 0, 0, 0)
         HoverFill: |-
             =RGBA(4, 114, 14, 0.9)
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "3335307018");
+            =Set( varmaquina , "3335107018");
             //Set( varsetor ;  Label_setor_20.Text );;
             Set( varsetor , Text(LookUp(CreateMaquina, varmaquina = CAF).SETOR));
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
@@ -204,16 +204,16 @@ Usinagem_Caixa_Diferencial_Completa As screen:
             NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
         Size: =24
         Text: =""
-        Width: =82
-        X: =547
-        Y: =267
+        Width: =79
+        X: =544
+        Y: =275
         ZIndex: =10
 
     Btnmaq_174 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
         DisabledFill: =RGBA(0, 0, 0, 0)
         Fill: =RGBA(0, 0, 0, 0)
-        Height: =78
+        Height: =82
         HoverColor: =RGBA(0, 0, 0, 0)
         HoverFill: |-
             =RGBA(4, 114, 14, 0.9)
@@ -231,16 +231,16 @@ Usinagem_Caixa_Diferencial_Completa As screen:
             NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
         Size: =24
         Text: =""
-        Width: =82
-        X: =471
-        Y: =456
+        Width: =79
+        X: =467
+        Y: =481
         ZIndex: =11
 
     Btnmaq_175 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
         DisabledFill: =RGBA(0, 0, 0, 0)
         Fill: =RGBA(0, 0, 0, 0)
-        Height: =78
+        Height: =82
         HoverColor: =RGBA(0, 0, 0, 0)
         HoverFill: |-
             =RGBA(4, 114, 14, 0.9)
@@ -258,78 +258,24 @@ Usinagem_Caixa_Diferencial_Completa As screen:
             NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
         Size: =24
         Text: =""
-        Width: =82
-        X: =471
-        Y: =551
+        Width: =79
+        X: =467
+        Y: =584
         ZIndex: =12
-
-    Btnmaq_176 As button:
-        DisabledColor: =RGBA(0, 0, 0, 0)
-        DisabledFill: =RGBA(0, 0, 0, 0)
-        Fill: =RGBA(0, 0, 0, 0)
-        Height: =78
-        HoverColor: =RGBA(0, 0, 0, 0)
-        HoverFill: |-
-            =RGBA(4, 114, 14, 0.9)
-            
-            //ColorFade(RGBA(56; 96; 178; 1); -20%)
-        OnSelect: |
-            =Set( varmaquina , "3321107009");
-            //Set( varsetor ;  Label_setor_20.Text );;
-            Set( varsetor , Text(LookUp(CreateMaquina, varmaquina = CAF).SETOR));
-            Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
-            Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
-            Set( varselect , 1) ;
-            Set(varDelay,false);
-            Set(varIDpai,  Value(DataCardute.Selected.Result) & Value(DataCardmaquina.Selected.Result) & DataCardcolaborador.Text & DataCarddata.SelectedDate & DataCardhora_inicio.Selected.Result) ; Set(varDelta , 0) ;
-            NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
-        Size: =24
-        Text: =""
-        Width: =82
-        X: =395
-        Y: =645
-        ZIndex: =13
-
-    Btnmaq_177 As button:
-        DisabledColor: =RGBA(0, 0, 0, 0)
-        DisabledFill: =RGBA(0, 0, 0, 0)
-        Fill: =RGBA(0, 0, 0, 0)
-        Height: =78
-        HoverColor: =RGBA(0, 0, 0, 0)
-        HoverFill: |-
-            =RGBA(4, 114, 14, 0.9)
-            
-            //ColorFade(RGBA(56; 96; 178; 1); -20%)
-        OnSelect: |
-            =Set( varmaquina , "3321107010");
-            //Set( varsetor ;  Label_setor_20.Text );;
-            Set( varsetor , Text(LookUp(CreateMaquina, varmaquina = CAF).SETOR));
-            Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
-            Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
-            Set( varselect , 1) ;
-            Set(varDelay,false);
-            Set(varIDpai,  Value(DataCardute.Selected.Result) & Value(DataCardmaquina.Selected.Result) & DataCardcolaborador.Text & DataCarddata.SelectedDate & DataCardhora_inicio.Selected.Result) ; Set(varDelta , 0) ;
-            NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
-        Size: =24
-        Text: =""
-        Width: =82
-        X: =547
-        Y: =645
-        ZIndex: =14
 
     Btnmaq_178 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
         DisabledFill: =RGBA(0, 0, 0, 0)
         DisplayMode: =DisplayMode.View
         Fill: =RGBA(0, 0, 0, 0)
-        Height: =78
+        Height: =82
         HoverColor: =RGBA(0, 0, 0, 0)
         HoverFill: |-
             =RGBA(4, 114, 14, 0.9)
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "3321307002");
+            =Set( varmaquina , "3543");
             //Set( varsetor ;  Label_setor_20.Text );;
             Set( varsetor , Text(LookUp(CreateMaquina, varmaquina = CAF).SETOR));
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
@@ -341,16 +287,16 @@ Usinagem_Caixa_Diferencial_Completa As screen:
         Size: =24
         Text: =""
         Tooltip: ="CAF não cadastrado"
-        Width: =82
-        X: =471
-        Y: =740
+        Width: =79
+        X: =467
+        Y: =687
         ZIndex: =15
 
     Btnmaq_179 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
         DisabledFill: =RGBA(0, 0, 0, 0)
         Fill: =RGBA(0, 0, 0, 0)
-        Height: =78
+        Height: =82
         HoverColor: =RGBA(0, 0, 0, 0)
         HoverFill: |-
             =RGBA(4, 114, 14, 0.9)
@@ -368,16 +314,16 @@ Usinagem_Caixa_Diferencial_Completa As screen:
             NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
         Size: =24
         Text: =""
-        Width: =82
-        X: =471
-        Y: =835
+        Width: =79
+        X: =467
+        Y: =790
         ZIndex: =16
 
     Btnmaq_180 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
         DisabledFill: =RGBA(0, 0, 0, 0)
         Fill: =RGBA(0, 0, 0, 0)
-        Height: =78
+        Height: =82
         HoverColor: =RGBA(0, 0, 0, 0)
         HoverFill: |-
             =RGBA(4, 114, 14, 0.9)
@@ -395,16 +341,16 @@ Usinagem_Caixa_Diferencial_Completa As screen:
             NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
         Size: =24
         Text: =""
-        Width: =82
-        X: =471
-        Y: =929
+        Width: =79
+        X: =467
+        Y: =894
         ZIndex: =17
 
     Btnmaq_181 As button:
         DisabledColor: =RGBA(0, 0, 0, 0)
         DisabledFill: =RGBA(0, 0, 0, 0)
         Fill: =RGBA(0, 0, 0, 0)
-        Height: =78
+        Height: =82
         HoverColor: =RGBA(0, 0, 0, 0)
         HoverFill: |-
             =RGBA(4, 114, 14, 0.9)
@@ -422,32 +368,10 @@ Usinagem_Caixa_Diferencial_Completa As screen:
             NewForm('Form Produção');Navigate(Tel_Edit_Producao, ScreenTransition.None);
         Size: =24
         Text: =""
-        Width: =82
-        X: =471
-        Y: =1023
+        Width: =79
+        X: =467
+        Y: =997
         ZIndex: =18
-
-    Label6 As label:
-        Color: =RGBA(255, 255, 255, 1)
-        Fill: =RGBA(255, 255, 255, 1)
-        Height: =95
-        Size: =21
-        Text: ="Máquinas foram eliminadas"
-        Width: =338
-        X: =301
-        Y: =645
-        ZIndex: =19
-
-    Label6_1 As label:
-        Color: =RGBA(255, 255, 255, 1)
-        Fill: =RGBA(255, 255, 255, 1)
-        Height: =175
-        Size: =21
-        Text: =
-        Width: =111
-        X: =282
-        Y: =514
-        ZIndex: =20
 
     Label6_2 As label:
         Color: =RGBA(255, 255, 255, 1)
