--- a/Levantamento de Perdas/Src/Tel_Edit_Perdas.fx.yaml
+++ b/Levantamento de Perdas/Src/Tel_Edit_Perdas.fx.yaml
@@ -61,7 +61,9 @@
         DataSource: =[@LancamentoPerdas]
         Height: =1033
         Item: =BrowseGallery1perdas.Selected
-        OnSuccess: =If(varDelta = 0 ,  Back() , NewForm(Formperdas) ; Navigate(Tel_Edit_Perdas))
+        OnSuccess: |-
+            =If(varDelta = 0 ,  Back() , NewForm(Formperdas) ; Navigate(Tel_Edit_Perdas));
+            IconAccept1.DisplayMode.Edit
         Width: =Parent.Width
         Y: =103
         ZIndex: =5
@@ -1532,4 +1534,32 @@
             Width: =132
             X: =506
             ZIndex: =9
+
+    Container1 As groupContainer:
+        Fill: =RGBA(153, 207, 236, 1)
+        Height: =657
+        Visible: =ctxLoading
+        Width: =640
+        Y: =178
+        ZIndex: =16
+
+        Label8 As label:
+            Color: =RGBA(255, 255, 255, 1)
+            Fill: =RGBA(153, 207, 236, 1)
+            Height: =70
+            Size: =21
+            Text: ="Aguarde o carregamento das informações"
+            Width: =560
+            X: =40
+            Y: =40
+            ZIndex: =1
+
+        Image2 As image:
+            Fill: =RGBA(153, 207, 236, 1)
+            Height: =320
+            Image: =Gears
+            Width: =320
+            X: =168
+            Y: =146
+            ZIndex: =2
 
