--- a/Levantamento de Perdas/Src/Tel_Edit_Perdas.fx.yaml
+++ b/Levantamento de Perdas/Src/Tel_Edit_Perdas.fx.yaml
@@ -515,7 +515,8 @@
                 InputTextPlaceholder: ="Hora"
                 Items: =Distinct(CreateHora,Hora)
                 NoSelectionText: ="Hora Inicial"
-                OnChange: =Set(varIDpai,  Value(DataCardute_1.Selected.Result) & Value(DataCardmaquina_1.Selected.Result) & DataCardcolaborador_1.Text & DataCarddata_1.SelectedDate & DataCardhora_inicio_1.Selected.Result) ; Set(varCapacidade, Cap_Produtiva_1)
+                OnChange: |
+                    =Set(varIDpai,  Value(DataCardute_1.Selected.Result) & Value(DataCardmaquina_1.Selected.Result) & DataCardcolaborador_1.Text & DataCarddata_1.SelectedDate & DataCardhora_inicio_1.Selected.Result) ; Set(varCapacidade, Cap_Produtiva_1);
                 SearchFields: =["Result"]
                 SearchItems: =Search(Distinct(CreateHora,Hora),DataCardhora_inicio_1.SearchText,"Result")
                 SelectMultiple: =false
@@ -1391,7 +1392,7 @@
                 varCapacidade,
                 Cap_Produtiva_1
             );
-            Timer1_1.Reset = true
+            Timer1_1.Reset = true ;
         Reset: =true
         Start: =varDelay_2
         Tooltip: ="Selecione para atualizar os dados de produção prevista e delta se não tiver atualizado automaticamente"
@@ -1463,7 +1464,9 @@
         Color: =RGBA(255, 255, 255, 1)
         Height: =88
         Icon: =Icon.History
-        OnSelect: =Set(varDelay_2 , true)
+        OnSelect: |+
+            =Set(varDelay_2 , true);
+            
         PaddingBottom: =15
         PaddingLeft: =15
         PaddingRight: =15
@@ -1535,31 +1538,96 @@
             X: =506
             ZIndex: =9
 
-    Container1 As groupContainer:
-        Fill: =RGBA(153, 207, 236, 1)
-        Height: =657
-        Visible: =ctxLoading
-        Width: =640
-        Y: =178
+    Button1 As button:
+        Height: =70
+        OnSelect: |-
+            =UpdateContext({ctxLoading: true});
+            Set( varDelta,500);
+            Set(
+                varDelta,
+                Cap_Produtiva_1 - (DataCardquantidade_1 + Sum(
+                    Sum(
+                        Filter(
+                            LancamentoProducao,
+                            ((MAQUINA = varmaquina) && (DATA = Text(DataCarddata_1.SelectedDate)) && (HORA_INICIO = DataCardhora_inicio_1.Selected.Result))
+                        ).QUANTIDADE,
+                        QUANTIDADE
+                    ) + Sum(
+                        Filter(
+                            LancamentoPerdas,
+                            ((MAQUINA = varmaquina) && (DATA = Text(DataCarddata_1.SelectedDate)) && (HORA_INICIO = DataCardhora_inicio_1.Selected.Result))
+                        ).QUANTIDADE,
+                        QUANTIDADE
+                    )
+                ))
+            );
+            Set(
+                varDelay_2,
+                false
+            );
+            Set(
+                varCapacidade,
+                Cap_Produtiva_1
+            );
+            
+            Set( varDelta , 500 );
+            
+            Set(
+                varDelta,
+                Cap_Produtiva_1 - (DataCardquantidade_1 + Sum(
+                    Sum(
+                        Filter(
+                            LancamentoProducao,
+                            ((MAQUINA = varmaquina) && (DATA = Text(DataCarddata_1.SelectedDate)) && (HORA_INICIO = DataCardhora_inicio_1.Selected.Result))
+                        ).QUANTIDADE,
+                        QUANTIDADE
+                    ) + Sum(
+                        Filter(
+                            LancamentoPerdas,
+                            ((MAQUINA = varmaquina) && (DATA = Text(DataCarddata_1.SelectedDate)) && (HORA_INICIO = DataCardhora_inicio_1.Selected.Result))
+                        ).QUANTIDADE,
+                        QUANTIDADE
+                    )
+                ))
+            );
+            Set(
+                varDelay_2,
+                false
+            );
+            Set(
+                varCapacidade,
+                Cap_Produtiva_1
+            );
+            UpdateContext({ctxLoading: false});
+        Size: =24
+        Text: ="Botão"
+        Width: =280
+        X: =172
+        Y: =9
         ZIndex: =16
 
-        Label8 As label:
-            Color: =RGBA(255, 255, 255, 1)
-            Fill: =RGBA(153, 207, 236, 1)
-            Height: =70
-            Size: =21
-            Text: ="Aguarde o carregamento das informações"
-            Width: =560
-            X: =40
-            Y: =40
-            ZIndex: =1
+    Loading As group:
+        Height: =5
+        Width: =5
+        X: =40
+        Y: =40
+        ZIndex: =16
 
-        Image2 As image:
-            Fill: =RGBA(153, 207, 236, 1)
+        Label9 As label:
+            Fill: =RGBA(255, 255, 255, 0.81)
+            Height: =1136
+            Size: =21
+            Text: =
+            Visible: =ctxLoading
+            Width: =640
+            ZIndex: =14
+
+        Image4 As image:
             Height: =320
             Image: =Gears
+            Visible: =ctxLoading
             Width: =320
-            X: =168
-            Y: =146
-            ZIndex: =2
+            X: =171
+            Y: =403
+            ZIndex: =15
 
